# firmware

./: CMakeLists.txt
include/: firmware.h
src/: firmware.cpp  main.cpp
tests/: firmware_test.cpp  main.cpp
